k8/hive/mqtt-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivemq-ingress
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "stickounet"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
    - host: mqtt.iot.heldgaard.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hivemq-hivemq-mqtt-ws
                port:
                  number: 8000
  tls:
    - hosts:
      - mqtt.iot.heldgaard.dev
      secretName: mqtt-iot-certs
